objects/VisitOps__Attendee__c.object
<CustomObject>
    <description>An attendee is either a contact, User, Adhoc User who participates in a Visit.</description>
    <fields>
        <fullName>VisitOps__Account_Name__c</fullName>
        <formula>VisitOps__Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__AirTravelDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Air Travel Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__AirTravelNotes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Air Travel Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c  )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__AttendeeDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__AttendeeNotes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee_Name__c</fullName>
        <description>Name of the Attendee</description>
        <formula>IF(NOT(ISBLANK(VisitOps__FirstName__c)), VisitOps__FirstName__c + &apos; &apos; +  VisitOps__LastName__c, VisitOps__LastName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee_Role__c</fullName>
        <label>Attendee Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-Suite</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee_Survey_Link__c</fullName>
        <formula>IF(  NOT( ISPICKVAL(VisitOps__Attendee_Types__c, &apos;Employee&apos;) )  , 

 HYPERLINK(VisitOps__Survey_link1__c,&quot;Survey Link&quot; ) , 
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee_Type__c</fullName>
        <formula>IF(VisitOps__IsAttendeeCustomer__c, &apos;Customer&apos;,  IF(VisitOps__IsAttendeeEmployee__c, &apos;Employee&apos;,  IF(VisitOps__IsAttendeePartner__c, &apos;Partner&apos;, &apos;Other&apos;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendee_Types__c</fullName>
        <label>Attendee Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Company__c</fullName>
        <description>Company of Adhoc user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__ConfirmationNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__ContactDietType__c</fullName>
        <formula>IF( ISNULL( VisitOps__Contact__c ) , null,   TEXT(VisitOps__Contact__r.VisitOps__DietType__c)  )</formula>
        <label>Contact Diet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__ContactDietaryRequirements__c</fullName>
        <formula>IF(ISNULL(VisitOps__Contact__c), null, VisitOps__Contact__r.VisitOps__DietaryRequirements__c)</formula>
        <label>Contact Dietary Requirements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates that the Attendee is a contact which may or may not be associated to an Account</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE( VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c  )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__DietType__c</fullName>
        <description>This field displays the diet type for the attendee.  If diet type exists on the Contact record, this field will auto populate with those details.</description>
        <inlineHelpText>This field displays the diet type for the attendee.  If diet type exists on the Contact record, this field will auto populate with those details.  This information will also display on the agenda session records for reference.</inlineHelpText>
        <label>Diet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Gluten Free</fullName>
                </value>
                <value>
                    <fullName>Low Cholesterol-Low Fat</fullName>
                </value>
                <value>
                    <fullName>Low Sodium</fullName>
                </value>
                <value>
                    <fullName>Lactose-Free</fullName>
                </value>
                <value>
                    <fullName>Nut or Peanut Allergies</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__DietaryRequirements__c</fullName>
        <description>This field displays the dietary requirements for the attendee.  If dietary information exists on the Contact record, this field will auto populate with those details.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field displays the dietary requirements for the attendee.  If dietary information exists on the Contact record, this field will auto populate with those details.  This information also displays on the agenda sessions for reference.</inlineHelpText>
        <label>Dietary Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__FirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__GroundTransportationDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ground Transportation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__GroundTransportationNotes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ground Transportation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__GroundTransportationSupplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Supplier of Supplier type = Ground Transportation</description>
        <label>Ground Transportation Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VisitOps__Supplier__c.VisitOps__Supplier_Type__c</field>
                <operation>equals</operation>
                <value>Ground Transportation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>AttendeeLogistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsAttendeeCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee is a Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsAttendeeEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee is an Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsAttendeeOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee is Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsAttendeePartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee is a Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsPostSurveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Post-survey is sent to attendee. This field MAY no longer be used.</description>
        <label>Post Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsPreSurveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Pre-survey is sent to attendee.  This field MAY no longer be used.</description>
        <label>PreSurvey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsPrimaryDecisionMakerForVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Decision Maker for Visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Is_Visit_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the attendee is a Visit Owner</description>
        <label>Is Visit Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Language__c</fullName>
        <label>Survey Language (Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>zh_CN</fullName>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de_DE</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>pl</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__LastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LinkedInUrlFormula__c</fullName>
        <description>This contains the LinkedIn Profile Url for associated Contact</description>
        <formula>VisitOps__Contact__r.VisitOps__LinkedInUrl__c</formula>
        <label>LinkedIn Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LinkedIn_Url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LinkedIn Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__LinkedIn__c</fullName>
        <formula>IF( ISBLANK(VisitOps__LinkedIn_Url__c) || BEGINS(&apos;http&apos;,LOWER(VisitOps__LinkedIn_Url__c)) || BEGINS(&apos;https&apos;,LOWER(VisitOps__LinkedIn_Url__c)) , VisitOps__LinkedIn_Url__c , HYPERLINK(&apos;http://&apos;+VisitOps__LinkedIn_Url__c, IMAGE( $Label.visitops__linkedinimg , VisitOps__LinkedIn_Url__c,20,20) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Name__c</fullName>
        <formula>IF(NOT(ISBLANK(VisitOps__FirstName__c)), VisitOps__FirstName__c + &apos; &apos; + VisitOps__LastName__c, VisitOps__LastName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Objectives_for_this_Attendee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Objectives for this Attendee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field MAY no longer be used.</description>
        <label>Post Survey Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post-Survey Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Sent_Date__c</fullName>
        <description>Captures the datetime Post Survey is sent to the user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Post-survey is sent to attendee</description>
        <label>Post Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Status__c</fullName>
        <formula>IF(VisitOps__Post_Survey_Recieved__c,&apos;Recieved&apos;,IF( VisitOps__Post_Survey_Sent__c,&apos;Sent&apos;,IF(VisitOps__Post_Survey_Required__c ,&apos;Scheduled&apos;,&apos;Not Scheduled&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Survey Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__PreSurveySent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Pre-survey is sent to attendee</description>
        <label>Pre-Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field MAY no longer be used.</description>
        <label>Pre Survey Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Survey Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_Sent_Date__c</fullName>
        <description>Captures the datetime the survey is sent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_Status__c</fullName>
        <formula>IF(VisitOps__Pre_Survey_Recieved__c,&apos;Recieved&apos;,IF(VisitOps__PreSurveySent__c,&apos;Sent&apos;,IF( VisitOps__Pre_Survey_Required__c,&apos;Scheduled&apos;,&apos;Not Scheduled&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Survey status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Prefix__c</fullName>
        <description>Prefix for Attendee</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Print_Name_Badge__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+$Label.visitops__name_badge_page_name+&apos;?isPrint=true&amp;AttendeeId=&apos;+ Id , &apos;Print Name Badge&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Name Badge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Print__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+$Label.visitops__tent_cards_page_name+&apos;?isPrint=true&amp;AttendeeId=&apos;+ Id , &apos;Print Tent Card&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Tent Card</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Salesforce_Contact_ID__c</fullName>
        <formula>VisitOps__Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__SendPostSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Post Survey has to be sent.</description>
        <label>Send Post Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__SendPreSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether pre-survey has to be sent</description>
        <label>Send Pre-Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Send_Decision_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Decision Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Suffix__c</fullName>
        <description>Suffix field for attendee</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Survey_Language__c</fullName>
        <label>Survey Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VisitOps__Survey_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Survey_link1__c</fullName>
        <formula>$Label.visitops__visitops_site_url+&apos;/&apos;+$Label.visitops__survey_link_label+&apos;?visitid=&apos;+ VisitOps__Visit__c+&apos;&amp;attendeeid=&apos;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Survey_link__c</fullName>
        <description>Survey link</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Survey link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__TravelArrangements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Travel Arrangements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__TravelDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Travel details for this person</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitArrivalDateTime__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__ArrivalDateTime__c</formula>
        <label>Visit Arrival Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitDepartureDateTime__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__DepartureDateTime__c</formula>
        <label>Visit Departure Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitNameFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitName__c</formula>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitOwnerFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitOwner__r.FirstName + &apos; &apos; + VisitOps__Visit__r.VisitOps__VisitOwner__r.LastName</formula>
        <label>Visit Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitTypeFormula__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__VisitType__r.Name</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Arrival_Date__c</fullName>
        <description>This field is used for Portal Lookup</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please format: MM/DD/YYYY</inlineHelpText>
        <label>Visit Arrival Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Bundle</label>
        <referenceTo>VisitOps__VisitBundle__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Location_Name__c</fullName>
        <formula>VisitOps__Visit__r.VisitOps__Location__r.Name</formula>
        <label>Visit Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The visit name to which the attendee is associated to.</description>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Attendee_Name__c</columns>
        <columns>VisitOps__Company__c</columns>
        <columns>VisitOps__Title__c</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>VisitOps__VisitNameFormula__c</columns>
        <columns>VisitOps__VisitArrivalDateTime__c</columns>
        <columns>VisitOps__Attendee_Type__c</columns>
        <columns>VisitOps__Attendee_Types__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VisitOps__To_verify_Attendee_type</fullName>
        <active>true</active>
        <description>Only one attendee type needs to be checked for a particular attendee</description>
        <errorConditionFormula>IF((IF(VisitOps__IsAttendeeCustomer__c, 1, 0) +  IF(VisitOps__IsAttendeeEmployee__c, 1, 0) + IF(VisitOps__IsAttendeePartner__c, 1, 0) + IF(VisitOps__IsAttendeeOther__c, 1, 0))&gt;1,true,false)</errorConditionFormula>
        <errorMessage>Attendee can only be one of the following types: Customer, Partner, Employee, Other</errorMessage>
    </validationRules>
</CustomObject>